--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Формуляр</string>
     <string name="attachments">Вложения:</string>
     <string name="text_share">Поделиться</string>
+    <string name="test">452</string>
 </resources>
