Fix (работает на android 4)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="attachments">Вложения:</string>
     <string name="text_share">Поделиться</string>
     <string name="test">452</string>
+    <string name="visitors">Просмотры</string>
 </resources>
