Пофиксил issue 7, переделал структуру хранения ссылок

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="attachments">Вложения:</string>
     <string name="text_share">Поделиться</string>
     <string name="test">452</string>
+    <string name="loading">Загрузка...</string>
     <string name="visitors">Просмотры</string>
     <string name="text_settings">Настройки</string>
     <string name="text_about">О программе</string>
