--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="loading">Загрузка...</string>
     <string name="text_settings">Настройки</string>
     <string name="text_downloaded">Загруженные</string>
-    <string name="text_download">Загружать открываемые страницы</string>
+    <string name="text_download">Скачать</string>
     <string name="author">Разработал Бударный Даниил</string>
     <string name="text_search">Поиск</string>
     <string name="text_main">Главная</string>
