--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,6 @@
     <string name="action_share">Поделиться</string>
     <string name="action_download">Скачать</string>
     <string name="deeplink_prefix">/posts/</string>
-    <string name="deeplink_host">https://sanctumlogos.info/</string>
+    <string name="deeplink_host">sanctumlogos.info</string>
     <string name="quiz_title_placeholder">ТЕКСТ ВОПРОСА</string>
 </resources>
