--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="articlesLoadFail">Проверьте подключение к сети</string>
     <string name="action_share">Поделиться</string>
     <string name="action_delete">Удалить</string>
+    <string name="download_error_not_supported">Данную страницу невозможно загрузить</string>
     <string name="action_download">Скачать</string>
     <string name="deeplink_prefix">/posts/</string>
     <string name="deeplink_host">https://sanctumlogos.info/</string>
