--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,9 @@
     <string name="download_error_not_supported">Данную страницу невозможно загрузить</string>
     <string name="action_download">Скачать</string>
     <string name="deeplink_prefix">/posts/</string>
+    <string name="cache_update">Обновляю кэш записи</string>
+    <string name="cache_uptodate">Уже сохранена последняя версия</string>
+    <string name="error_load">Ошибка загрузки</string>
     <string name="deeplink_host">https://sanctumlogos.info/</string>
     <string name="quiz_title_placeholder">ТЕКСТ ВОПРОСА</string>
 </resources>
