Отмена удаления записи

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="quiz_title_placeholder">ТЕКСТ ВОПРОСА</string>
     <string name="channel_name">FormChannel</string>
     <string name="channel_description">FormChannelDesc</string>
+    <string name="undo_string">Отменить</string>
 </resources>
