--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Формуляр</string>
+    <string name="app_name">Формуляр - Logos</string>
     <string name="text_share">Поделиться</string>
     <string name="loading">Загрузка...</string>
     <string name="text_settings">Настройки</string>
