Добавил пункт показывать уведомления в настройки

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,8 @@
     <string name="auto_download_summary_off">Страницы будут загружены только после нажатия на кнопку загрузки.</string>
     <string name="auto_download_summary_on">Все открываемые страницы будут загружаться</string>
     <string name="auto_download_title">Автозагрузка открываемых страниц</string>
+    <string name="notifications_header">Уведомления</string>
+    <string name="notifications_summary_off">Уведомления не будут показываться</string>
+    <string name="notifications_summary_on">Уведомления будут показываться.</string>
+    <string name="notifications_title">Показывать уведомления о загрузке</string>
 </resources>
