Обновление содержимого webview

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="title_activity_settings">Настройки</string>
     <string name="reading_header">Чтение и просмотр</string>
     <string name="text_size">Размер текста</string>
+    <string name="theme_update_action_toast">Обновляю страницу</string>
     <string name="auto_download_summary_off">Страницы будут загружены только после нажатия на кнопку загрузки.</string>
     <string name="auto_download_summary_on">Все открываемые страницы будут загружаться</string>
     <string name="auto_download_title">Автозагрузка открываемых страниц</string>
@@ -38,4 +39,5 @@
     <string name="notifications_summary_on">Уведомления будут показываться.</string>
     <string name="notifications_title">Показывать уведомления о загрузке</string>
     <string name="string_about">О проекте</string>
+    <string name="update">Обновить страницу</string>
 </resources>
