--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,15 +24,15 @@
     <string name="error_load">Ошибка загрузки</string>
     <string name="deeplink_host">sanctumlogos.info</string>
     <string name="quiz_title_placeholder">ТЕКСТ ВОПРОСА</string>
-    <string name="channel_name">FormChannel</string>
-    <string name="channel_description">FormChannelDesc</string>
+    <string name="channel_name">Уведомления о загрузке</string>
+    <string name="channel_description">Этот параметр управляет видимостью уведомлений о загруженных материалах.</string>
     <string name="undo_string">Отменить</string>
     <string name="title_activity_settings">Настройки</string>
     <string name="reading_header">Чтение и просмотр</string>
     <string name="text_size">Размер текста</string>
     <string name="theme_update_action_toast">Обновляю страницу</string>
     <string name="auto_download_summary_off">Страницы будут загружены только после нажатия на кнопку загрузки.</string>
-    <string name="auto_download_summary_on">Все открываемые страницы будут загружаться</string>
+    <string name="auto_download_summary_on">Все открываемые страницы будут загружаться.</string>
     <string name="auto_download_title">Автозагрузка открываемых страниц</string>
     <string name="notifications_header">Уведомления</string>
     <string name="notifications_summary_off">Уведомления не будут показываться</string>
